# zile

./: .cvsignore  .gitignore  .prev-version  AUTHORS  BUGS  COPYRIGHT  CREDITS  ChangeLog  FAQ  HACKING  HISTORY  INSTALL  KNOWNBUGS  Makefile.am  Makefile.in  NEWS  README  README-hacking  README-prereq  README.compile  THANKS  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  bootstrap  bootstrap.conf  cfg.mk  config.h.in  configure  configure.ac  configure.in  cvs2cl-usermap  zile.lnk  zile.lsm  zile.pkg
doc/: .cvsignore  .gitignore  BANNER.EPOC  FAQ  Makefile.am  Makefile.in  TUTORIAL  config.h  dotzile.sample  lib.lua  lisp.txt  man-extras  mkdoc.c  mkvars.lua  std.lua  texinfo.lua  zile-on-guile.txt  zile.1  zile.1.in  zile.info  zile.texi  zilerc.sample  zilerc.texi  zlint
etc/: .cvsignore  FAQ  HELP  HELPWIN  HELPWINALT  LATEST_VERSION  MINIHELP1  MINIHELP2  MINIHELP3  Makefile.am  Makefile.in  TUTORIAL  mkdoc.c  rationale  refcard.ps  refcard.tex  zilerc.sample  zlint
lib/: .cvsignore  .gitignore  Makefile.am  Makefile.in  agetcwd.c  agetcwd.h  alist.3  alist.c  alist.h  astr.3  astr.c  astr.h  configmake.h  err.c  err.h  fcntl.h  htable.3  htable.c  htable.h  memcmp.c  ref-add.sed  ref-del.sed  regex.c  stdio.h  stdlib.h  string.h  strrstr.c  unistd.h  vasprintf.c  vector.c  vector.h  xmalloc.c  xrealloc.c  xstrdup.c
lib/sys/: stat.h
src/: .cvsignore  .gitignore  Makefile.am  Makefile.in  agetcwd.c  agetcwd.h  alist.c  alist.h  astr.c  astr.h  basic.c  bind.c  buffer.c  buffer.h  completion.c  completion.h  config.h.in  dotzile-extra.el  editfns.c  editfns.h  estr.c  estr.h  eval.c  eval.h  extern.h  file.c  fontlock.c  fontlock_c.c  fontlock_c.gperf  fontlock_cpp.c  fontlock_cpp.gperf  fontlock_csharp.c  fontlock_csharp.gperf  fontlock_java.c  fontlock_java.gperf  funcs.c  getkey.c  getopt.h  getopt_long_only.c  glue.c  (+109 more)
src/lisp-tests/: backward-word.el  backward_char.el  backward_delete_char.el  backward_kill_word.el  backward_paragraph.el  backward_sexp.el  backward_word.el  beginning-of-buffer.output  beginning_of_buffer.el  beginning_of_line.el  call_last_kbd_macro.el  capitalize_word.el  copy_region_as_kill.el  copy_to_register.el  delete_blank_lines.el  delete_char.el  delete_horizontal_space.el  delete_region.el  describe-bindings.el  describe-function.el  describe-variable.el  describe_bindings.el  describe_function.el  describe_key.el  describe_variable.el  describe_variable.output  downcase_region.el  downcase_word.el  end-of-buffer.output  end_of_buffer.el  end_of_line.el  exchange_point_and_mark.el  execute_extended_command.el  fill_paragraph.el  fill_paragraph.output  forward-word.el  forward_char.el  forward_line.el  forward_paragraph.el  forward_sexp.el  (+83 more)
src/replacement_regex/: regex.h
src/term_ncurses/: Makefile.am  Makefile.in  README  ncurses_key.c  ncurses_minibuf.c  ncurses_misc.c  ncurses_redisplay.c  term_ncurses.c  term_ncurses.h
src/tests/: backward_char.el  backward_delete_char.el  backward_kill_word.el  backward_paragraph.el  backward_sexp.el  backward_word.el  beginning_of_buffer.el  beginning_of_line.el  capitalize_word.el  copy_region_as_kill.el  copy_to_register.el  delete_blank_lines.el  delete_char.el  delete_horizontal_space.el  delete_region.el  describe_bindings.el  describe_function.el  describe_key.el  describe_variable.el  downcase_region.el  downcase_word.el  end_of_buffer.el  end_of_line.el  exchange_point_and_mark.el  fill_paragraph.el  forward_char.el  forward_line.el  forward_paragraph.el  forward_sexp.el  forward_word.el  forward_word.output  goto_char.el  goto_line.el  indent_for_tab_command.el  indent_relative.el  insert_buffer.el  insert_char.el  insert_file.el  just_one_space.el  kill_buffer.el  (+47 more)
src/testsuite/: .cvsignore  .gitignore  Makefile.am
tests/: Makefile.am  backward-paragraph.el  backward-sexp.scm  beginning-of-line.output  beginning-of-line.scm  capitalize-word.el  copy-region-as-kill.scm  copy-to-register.scm  delete-blank-lines.scm  delete-horizontal-space.scm  delete-region.el  delete-region.scm  describe-bindings.scm  describe-function.output  describe-function.scm  describe-key.output  describe-key.scm  describe-variable.scm  downcase-region.el  downcase-region.scm  elisp_to_scm.sh  end-of-buffer.el  end-of-line.scm  exchange-point-and-mark.scm  find-file-read-only.el  find-file.output  find-file.scm  forward-line.scm  indent-relative.scm  insert-buffer.scm  insert-file.scm  interactive_isearch-backward-regexp.el  interactive_isearch-backward-regexp.output  interactive_quoted-insert.el  interactive_quoted-insert.output  just-one-space.scm  kill-region.scm  kill-sexp.scm  kill-word.el  list-registers.scm  (+30 more)
tests/interactive/: backward-char.el  backward-delete-char.el  backward-kill-word.el  backward-paragraph.el  backward-sexp.el  backward-sexp.output  beginning-of-buffer.el  beginning-of-line.el  capitalize-word.el  capitalize-word.output  cd.el  copy-region-as-kill.el  copy-to-register.el  copy-to-register.output  delete-blank-lines.el  delete-char.el  delete-char.output  delete-horizontal-space.el  delete-region.el  delete-region.output  describe-bindings.el  describe-function.el  describe-function.output  describe-key.el  describe-variable.el  describe-variable.output  downcase-region.el  downcase-word.el  downcase-word.output  end-of-buffer.el  end-of-line.el  exchange-point-and-mark.el  exchange-point-and-mark.output  find-file-read-only.el  find-file.el  forward-char.el  forward-char.output  forward-line.el  forward-paragraph.el  forward-sexp.el  (+52 more)
tests/regression/: #34086.output  #34087.el  #34087.output  33910_execute-kbd-macro_with_quoted-insert.output  34080_buffer-name-suffix.el  34086_call-last-kbd-macro.el  34193_interactive_insert.el  35053_eob_upcase_word.el  35053_eob_upcase_word.output  35560_find-file_completion.el  35560_find-file_completion.output  35562_search-backward.el  35567_minibuffer_ding_non_printable.el  goto-char_large.el
tests/zile-only/: backward-delete-char_twice_in_empty_file.el  backward-word.el  end-of-line.output  fill-paragraph.el  goal-column.output  (+2 more)
(+205 files in other folders)
