dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/main.c)
AC_CONFIG_HEADER(src/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_C_INLINE
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl This is enabled by default, since only ncurses is supported yet.
AC_DEFINE(USE_NCURSES)

dnl Checks for libraries.
AC_REPLACE_FUNCS(xmalloc xrealloc xstrdup)
dnl The following check should depend on the `USE_NCURSES' definition.
AC_CHECK_LIB(ncurses, initscr)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)
dnl The following check should depend on the `USE_NCURSES' definition.
AC_CHECK_HEADERS(ncurses.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strerror)

AC_MSG_CHECKING(if the debugging code should be included)
AC_ARG_ENABLE(debug,
[  --enable-debug          include debugging code and assertions
			  (requires the dmalloc debugging package)],
[
AC_MSG_RESULT(yes)
AC_DEFINE(DEBUG)
], [
AC_MSG_RESULT(no)
AC_DEFINE(NDEBUG)
])

AC_DEFINE_UNQUOTED(CONFIGURE_DATE, ["`date '+%a %b %d %Y'`"])
AC_DEFINE_UNQUOTED(CONFIGURE_HOST, ["`hostname`"])

rm -f src/paths.h

AC_OUTPUT(doc/Makefile lib/Makefile etc/Makefile  src/Makefile \
          src/term_ncurses/Makefile Makefile)
